--- a/Style.css
+++ b/Style.css
@@ -4,6 +4,9 @@
 body {
   margin: 0;
   padding: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 a {
@@ -29,12 +32,13 @@ a {
   flex-wrap: wrap;
   flex-direction: column;
   justify-content: center;
-  height: 760px;
+  min-height: 760px;
+  align-items: center;
+  flex: 1;
 }
 
 .main-card {
-  max-width: 70vh;
-  margin-left: 500px;
+  max-width: 70%;
 }
 
 .navigation {
@@ -78,6 +82,7 @@ a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 100%;
 }
 .mainOtherHTML {
   background-color: beige;
