--- a/Style.css
+++ b/Style.css
@@ -117,6 +117,8 @@ a {
   overflow: hidden;
   width: 100%;
   min-height: 25vh;
+  flex-direction: column;
+  align-items: center;
 }
 .text {
   font-size: 22px;
@@ -133,7 +135,6 @@ a {
   justify-content: center;
   align-items: center;
   margin-top: 3%;
-  margin-left: 45%;
   font-size: 20px;
   width: 200px;
   height: 30px;
