--- a/Style.css
+++ b/Style.css
@@ -172,7 +172,7 @@ a {
   background-color: white;
   overflow: hidden;
   width: 100%;
-  height: 60vh;
+  min-height: 60vh;
 }
 .Task7PNG {
   display: flex;
