--- a/FinalProject/Style.css
+++ b/FinalProject/Style.css
@@ -230,3 +230,17 @@ Task18PNG {
   display: flex;
   justify-content: space-around;
 }
+
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-size: 20px;
+  align-items: center;
+  padding: 20px;
+}
+
+#quest_state_block {
+  visibility: hidden;
+  text-align: center;
+}
