Почти доделал профиль, осталась логика

--- a/FinalProject/Style.css
+++ b/FinalProject/Style.css
@@ -116,7 +116,7 @@ btn:hover {
   align-items: center;
 }
 .text {
-  font-size: 22px;
+  font-size: 3vh;
   display: flex;
   justify-content: center;
 }
